<resources>
    <string name="app_name">Vivo_App_Call</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one"><b style="font-size: 70px;">1 </b>\n*</string>
    <string name="two"><b style="font-size: 70px;">2 </b>\nABC</string>
    <string name="three">3 \nDEF</string>
    <string name="four">4 \nGHI</string>
    <string name="five">5 \nJKL</string>
    <string name="six">6 \nMNO</string>
    <string name="seven">7 \nPQRS</string>
    <string name="et">8 \nTUV</string>
    <string name="ig">9 \nWXYZ</string>
    <string name="zero">0 \n +</string>

    <string name="recode">Record</string>
    <string name="Onhold">On hold</string>
    <string name="mute">Mute</string>

    <string name="key">Keyped</string>
    <string name="end">call end</string>
    <string name="Add">Add call</string>
    <string name="videocall">Video call</string>
    <string name="speaker">Speaker</string>
    <string name="star">*</string>
    <string name="score_format">Current Score: %d</string>
    <string name="hes">#</string>





</resources>