<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vivo_app_call.fragment.calling">

    <data>

        <variable
            name="Callingdata"
            type="com.example.vivo_app_call.fragment.calling.Calling_model" />
    </data>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#080B1C"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cunumber"
        android:textColor="@color/white"
        android:text="@{String.valueOf(Callingdata.score)}"
        android:gravity="center"
        android:textSize="25sp"
        ></TextView>


    <Chronometer
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/timercall"

        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        >

    </Chronometer>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#F10A0A"
            android:gravity="center"
            android:text="@{Callingdata.endtime}"

            android:id="@+id/endtime"

            android:textSize="20sp"

            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

               <ImageView
                android:id="@+id/keypad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_record_voice_over_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/key"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

             <ImageView
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_record_voice_over_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/recode"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

              <ImageView
                android:id="@+id/hold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_sharp_radio_button_unchecked_24" />

              <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/Onhold"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_volume_mute_24" />
   <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/mute"

                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/addcall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_add_circle_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/Add"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/videocall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_video_call_24" />

               <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/videocall"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--on below line we are creating a new image view-->
            <ImageView
                android:id="@+id/speaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_speaker_phone_24" />

            <!--on below line we are displaying
                the type of image in text view-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/mute"
                android:textAlignment="center"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="horizontal"
        android:weightSum="1"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/endcall"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"

                android:layout_height="60dp"
                android:layout_weight="1"


                android:background="@drawable/btn_red_call"
                android:contentDescription="@string/end"
                android:src="@drawable/ic_baseline_call_end_24"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/Theme.green">


            </ImageButton>


        </LinearLayout>
    </LinearLayout>




</LinearLayout>
</layout>